# band_project

./: .chromedriver_cache_timestamp  .gitignore  check_us.py  config.py  debug.ipynb  debug.py  login_test.py  main.py  pyproject.toml
py_to_txt/: account_manager.py.txt  chrome_manager.py.txt  config.py.txt  main.py.txt  naverband_automation.py.txt  utils.py.txt
resources/: xpath_dict.py
resources/txt/: mozip.txt  mozip1.txt
src/: account_manager.py  chrome_manager.py  naverband_automation.py  utils.py
