[project]
name = "band-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "numpy>=1.24.4",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "selenium>=4.27.1",
    "selenium-stealth>=1.0.6",
    "setuptools>=80.9.0",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]
